# NovusCore-World

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Defines.h  EngineLoop.cpp  EngineLoop.h
src/ECS/Components/Network/: ConnectionComponent.h  ConnectionDeferredSingleton.h  ConnectionSingleton.h
src/ECS/Components/Singletons/: DBSingleton.h  MapSingleton.h  SpawnPlayerQueueSingleton.h  TeleportSingleton.h
src/ECS/Systems/: CreatePlayerTreeSystem.cpp  CreatePlayerTreeSystem.h  CreatureMovementSystem.cpp  CreatureMovementSystem.h  SpawnPlayerSystem.cpp  SpawnPlayerSystem.h  UpdateEntityPositionSystem.cpp  UpdateEntityPositionSystem.h
src/ECS/Systems/Network/: ConnectionSystems.cpp  ConnectionSystems.h
src/Gameplay/Map/: Map.cpp  Map.h  TeleportLocations.h
src/Network/Handlers/Client/: GeneralHandlers.cpp  GeneralHandlers.h
src/Network/Handlers/Client/Auth/: AuthHandlers.cpp  AuthHandlers.h
src/Network/Handlers/Self/: GeneralHandlers.cpp  GeneralHandlers.h
src/Network/Handlers/Self/Auth/: AuthHandlers.cpp  AuthHandlers.h
src/Utils/: ServiceLocator.cpp  ServiceLocator.h
